# cakemail-smtp-service

./: .gitignore  .pre-commit-config.yaml  AWS_STAGING_VS_PRODUCTION.md  DEPLOYMENT_GUIDE.md  README.md  deploy-aws-production.sh  deploy-aws-staging.sh  deploy-local.sh  pyproject.toml
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
deployment/aws/: eks-cluster-config.yaml  eks-staging-config.yaml
deployment/cert-manager/: certificate.yaml  clusterissuer-letsencrypt-prod.yaml  clusterissuer-letsencrypt-staging.yaml
deployment/docker/: Dockerfile
deployment/helm/smtp-gateway/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deployment/helm/smtp-gateway/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: EPIC_1_COMPLETE.md  EPIC_2_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  STORY_1.2_SUMMARY.md  STORY_1.3_SUMMARY.md  architecture.md  brief.md  prd.md
docs/deployment/: AWS_DEPLOYMENT_STATUS.md  README.md
src/smtp_gateway/: __init__.py  __main__.py  config.py  logging.py  metrics.py
src/smtp_gateway/api/: __init__.py  auth.py  circuit_breaker.py  client.py  email.py  errors.py  retry.py
src/smtp_gateway/email/: __init__.py  parser.py  transformer.py  validator.py
src/smtp_gateway/http/: __init__.py  health.py  metrics.py  server.py
src/smtp_gateway/smtp/: __init__.py  auth.py  handler.py  server.py  session.py  throttler.py
src/smtp_gateway/utils/: cache.py  helpers.py  tls.py
tests/: __init__.py  conftest.py
tests/integration/: test_e2e_email_flow.py  test_health.py  test_smtp_auth_flow.py  test_smtp_basic.py  test_smtp_tls.py
tests/unit/: test_api_auth.py  test_api_email.py  test_config.py  test_email_parser.py  test_logging.py  test_metrics.py  test_smtp_auth.py  test_smtp_handler.py  test_smtp_server.py
